YDA-6420 fix various layout issues

--- a/ckanext/cd2_theme/fanstatic/cd2_custom.css
+++ b/ckanext/cd2_theme/fanstatic/cd2_custom.css
@@ -482,6 +482,9 @@ header .debug {
   border-bottom: none;
   border-left-width: 0px;
   border-right-width: 1px;
+  float: left;
+  padding: 6px 12px;
+  line-height: 1.42857143;
 }
 .pagination > li > a:hover,
 .pagination > li > a:focus,
@@ -1296,7 +1299,7 @@ body .site-footer hr {
 .facet-badge {
   float: right;
   margin-right: 20px;
-  background-color: #aaa;
+  background-color: #aaa!important;
   min-width: 25px;
 }
 .section-range-slider {
@@ -1425,6 +1428,15 @@ body .site-footer hr {
   line-height: 14px;
   vertical-align: baseline;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+}
+.bg-info {
+  background-color: #117799 !important;
+  color: #fff !important;
+}
+.bg-info:hover,
+.bg-info:focus {
+  background-color: #31b0d5 !important;
+  color: #fff !important;
 }
 .label-info {
   line-height: 24px;
@@ -2932,4 +2944,42 @@ header textarea:focus,
   .masthead .nav > li > a:focus {
     background-color: #117799;
   }
+}
+/* 
+  Creates a light background panel with inset shadow,
+  mimicking Bootstrap 3's .well style in Bootstrap 5.
+  Includes border, rounded corners, padding, and minimum height.
+*/
+.bs5-well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+/* 
+  Custom condensed table styling for Bootstrap 5:
+  - Bootstrap 5 removed `table-condensed`.
+  - This reduces padding in table cells to make the table more compact.
+  - Use `.table-condensed-bs5` along with `table` and `table-striped`.
+  - Add `.shadow-sm` for a subtle drop shadow on the table.
+*/
+.table-condensed-bs5 td, 
+.table-condensed-bs5 th {
+  padding: 0.3rem; /* less than default 0.75rem */
+}
+/*
+/* 
+  Custom css for card (bootstrap 5) to mimic panel (bootsrap 3)
+*/
+.card {
+  margin-bottom: 5px;
+  background-color: #fff;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
 }
